--- a/index.html
+++ b/index.html
@@ -18,21 +18,39 @@
     <h1>Lista dos projetos para estudos</h1>
     <nav class="">
       <ul>
-        <li><a href="/Estudos-Front-End/Facebook-Clone">Facebook Clone</a></li>
         <li>
-          <a href="/Estudos-Front-End/Fotos-de-gatosApi">Fotos de gatos+api</a>
+          <a href="./Estudos-Front-End/Facebook-Clone/index.html"
+            >Facebook Clone</a
+          >
         </li>
         <li>
-          <a href="/Estudos-Front-End/Galeria-de-fotosApi"
+          <a href="./Estudos-Front-End/Fotos-de-gatosApi/index.html"
+            >Fotos de gatos+api</a
+          >
+        </li>
+        <li>
+          <a href="./Estudos-Front-End/Galeria-de-fotosApi/index.html"
             >Galeria de fotos+api</a
           >
         </li>
-        <li><a href="/Estudos-Front-End/Netflix-clone">Netflix clone</a></li>
-        <li><a href="/Estudos-Front-End/Tinder-Clone">Tinder Clone</a></li>
         <li>
-          <a href="/Estudos-Front-End/WebSite-TairyFail">WebSite TairyFail</a>
+          <a href="./Estudos-Front-End/Netflix-clone/index.html"
+            >Netflix clone</a
+          >
         </li>
-        <li><a href="/Estudos-Front-End/Windows-11-Web">Windows 11 Web</a></li>
+        <li>
+          <a href="./Estudos-Front-End/Tinder-Clone/index.html">Tinder Clone</a>
+        </li>
+        <li>
+          <a href="./Estudos-Front-End/WebSite-TairyFail/index.html"
+            >WebSite TairyFail</a
+          >
+        </li>
+        <li>
+          <a href="./Estudos-Front-End/Windows-11-Web/index.html"
+            >Windows 11 Web</a
+          >
+        </li>
       </ul>
     </nav>
   </body>
