--- a/Estudos-Front-End/WebSite-TairyFail/index.html
+++ b/Estudos-Front-End/WebSite-TairyFail/index.html
@@ -15,6 +15,7 @@
     UE00s/"
       crossorigin="anonymous"
     />
+    <script src="index.js" type="module" defer></script>
     <title>Tairy Fail</title>
   </head>
   <body>
@@ -196,6 +197,5 @@
       <h1 class="rodape-nome">Tairy Fail</h1>
       <legend id="copyright">copyright © 2022 - Arthur Santos  <a href="https://discord.gg/AGqhqrhE8d" target="_blank"><i class="fab fa-discord"></i><span></span></a></legend>
     </footer>
-    <script src="index.js"></script>
   </body>
 </html>
