--- a/Estudos-Front-End/Windows-11-Web/index.html
+++ b/Estudos-Front-End/Windows-11-Web/index.html
@@ -47,7 +47,28 @@
       </div>
       <img id="erroGif" src="./imgs/erro.gif" />
       <img id="erro" src="./imgs/erro.png" />
-      <img id="powerShelGif" src="./imgs/ps.gif" />
+
+      <div id="terminal">
+        <div id="terminalTop">
+          <div id="terinalTopTitle">Administrador: Windows PowerShell</div>
+          <div id="terminalTopClosed">X</div>
+        </div>
+        <div id="terminalContent">
+          <label for="terminalContent">Windows PowerShell</label>
+          <label for="terminalContent"
+            >Copyright © Microsoft Corporation. Todos os direitos
+            reservados.</label
+          >
+          <div id="terminalContentInput">
+            <label for="terminalContentInput">PS C:\Windows\System32></label>
+            <input id="comando" type="text" />
+          </div>
+          <div id="terminalExecution">
+            <p id="executionP"></p>
+          </div>
+        </div>
+      </div>
+
       <div id="areaDetrabalhgo">
         <div class="iconeArea" id="lixeira">
           <img src="./imgs/lixeira.png" />
@@ -55,7 +76,7 @@
         </div>
         <div class="iconeArea" id="internetE">
           <img src="./imgs/internetExplore.png" />
-          <legend>Internet Explorer </legend>
+          <legend>Internet Explorer</legend>
         </div>
         <div class="iconeArea" id="powerShel">
           <img src="./imgs/PowerShel.png" />
@@ -109,7 +130,11 @@
       </div>
     </footer>
     <script src="./js/index.js"></script>
-    
-    <iframe id="portfolioOpen" src="https://devarthursantos.github.io/Portifolio/" title="Portifólio"></iframe>
-    </body>
+
+    <iframe
+      id="portfolioOpen"
+      src="https://devarthursantos.github.io/Portifolio/"
+      title="Portifólio"
+    ></iframe>
+  </body>
 </html>
