--- a/Estudos-Front-End/Netflix-clone/index.html
+++ b/Estudos-Front-End/Netflix-clone/index.html
@@ -23,11 +23,11 @@
         <div id="contienerPerfil"><!-- Conteiner aberto -->
           <div id="perfilH"><h1>Quem esta assistindo agora?</h1></div> <!-- Perfil H1 -->
           <div id="perfils"> <!-- Perfil Divs Aberta -->
-          <div class="perfilsLogo"><img src="./img/Perfil1.gif" alt=""><legend>Arthur</legend></div> <!-- Perfil 1 -->
-          <div class="perfilsLogo"><img src="./img/Perfil2.png" alt=""><legend>Gabrielle</legend></div> <!-- Perfil 2 -->
-          <div class="perfilsLogo"><img src="./img/Perfil3.gif" alt=""><legend>Zusk</legend></div> <!-- Perfil 3 -->
-          <div class="perfilsLogo"><img src="./img/Perfil4.png" alt=""><legend>Lalinha</legend></div> <!-- Perfil 4 -->
-          <div class="perfilsLogo"><img src="./img/adicionar.png" alt=""><legend>Adicionar perfil</legend></div> <!-- Adicioner perfil botão -->
+          <div class="perfilsLogo"><img src="/img/perfil1.gif" alt=""><legend>Arthur</legend></div> <!-- Perfil 1 -->
+          <div class="perfilsLogo"><img src="/img/Perfil2.png" alt=""><legend>Gabrielle</legend></div> <!-- Perfil 2 -->
+          <div class="perfilsLogo"><img src="/img/Perfil3.gif" alt=""><legend>Zusk</legend></div> <!-- Perfil 3 -->
+          <div class="perfilsLogo"><img src="/img/Perfil4.png" alt=""><legend>Lalinha</legend></div> <!-- Perfil 4 -->
+          <div class="perfilsLogo"><img src="/img/adicionar.png" alt=""><legend>Adicionar perfil</legend></div> <!-- Adicioner perfil botão -->
         </div> <!-- Perfil Divs Fechada -->
           <div id="perfilAtual"><h3>GERENCIAR PERFILS</h3></div> <!-- Perfil 3 -->
         </div><!-- Conteiner fechado -->
@@ -35,7 +35,7 @@
 
       <header id="Header">
         <div id="navBar"">
-          <img id="logoHeader" src="./img/logo.png" alt="Netflix Logo" style="display: none;"/>
+          <img id="logoHeader" src="/img/logo.png" alt="Netflix Logo" style="display: none;"/>
 
           <nav id="menuNav">
             <ul>
@@ -59,21 +59,21 @@
 
       <main id="conteinerMain">
         <section id="homeBanner">
-          <img id="bannerHome" src="./img/home1.jpg" alt="">
+          <img id="bannerHome" src="/img/home1.jpg" alt="">
         </section>
         <section id="conteudoMain">
           <section class="Filmes">
             <h4>Drama</h4>            
             <div>
-            <img class="capasFilmes2" src="./img/capa1.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa2.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa3.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa4.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa5.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa6.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa7.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa1.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa2.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa1.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa2.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa3.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa4.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa5.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa6.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa7.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa1.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa2.jpg" alt="">
             <i class="fa-solid fa-angle-left"></i><i class="fa-solid fa-angle-right"></i>
           </div>
 
@@ -81,15 +81,15 @@
           <section class="Filmes">
             <h4>Ação</h4>            
             <div>
-            <img class="capasFilmes2" src="./img/capa1.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa2.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa3.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa4.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa5.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa6.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa7.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa1.jpg" alt="">
-            <img class="capasFilmes2" src="./img/capa2.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa1.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa2.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa3.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa4.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa5.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa6.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa7.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa1.jpg" alt="">
+            <img class="capasFilmes2" src="/img/capa2.jpg" alt="">
             <i class="fa-solid fa-angle-left"></i><i class="fa-solid fa-angle-right"></i>
           </div>
 
@@ -97,30 +97,30 @@
           <section class="Filmes">
             <h4>Suspense</h4>
             <div>
-              <img class="capasFilmes2" src="./img/capa1.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa2.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa3.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa4.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa5.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa6.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa7.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa1.jpg" alt="">
-              <img class="capasFilmes2" src="./img/capa2.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa1.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa2.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa3.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa4.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa5.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa6.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa7.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa1.jpg" alt="">
+              <img class="capasFilmes2" src="/img/capa2.jpg" alt="">
             </div>
 
           </section>
           <section class="Filmes">
             <h4>Anime</h4>            
             <div>
-            <img class="capasFilmes" src="./img/capa1.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa2.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa3.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa4.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa5.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa6.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa7.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa1.jpg" alt="">
-            <img class="capasFilmes" src="./img/capa2.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa1.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa2.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa3.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa4.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa5.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa6.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa7.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa1.jpg" alt="">
+            <img class="capasFilmes" src="/img/capa2.jpg" alt="">
           </div>
           </section>
         </section>
